# api_skeleton

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.app_name }}/: .dockerignore  .gitignore  Dockerfile  Makefile  build-requirements.txt  mypy.ini  pyproject.toml  requirements-build.txt
{{ cookiecutter.app_name }}/.dev/idea/: idea_default_run_manager.xml  prepare_idea.py
{{ cookiecutter.app_name }}/tests/{{ cookiecutter.app_name }}/services/: test_fapi.py
{{ cookiecutter.app_name }}/{{ cookiecutter.app_name }}/: config.py  main.py  routes.py
{{ cookiecutter.app_name }}/{{ cookiecutter.app_name }}/api/: internal_.py
