[tool.black]
line-length = 100
include="/{{ cookiecutter.app_name }}"

[tool.poetry]
name = "{{ cookiecutter.app_name }}"
version = "{{ cookiecutter.version }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
description = "{{ cookiecutter.description }}"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.6,<4"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "==5.*,>=5.2.0"
coverage = "==5.*,>=5.3.0"
black = "^20.8b1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
